fix: fixing minor bugs and finishing the project

--- a/files/httpd.conf.j2
+++ b/files/httpd.conf.j2
@@ -192,7 +192,7 @@ LoadModule php7_module /usr/local/opt/php@{{ php_version }}/lib/httpd/modules/li
 # running httpd, as with most system services.
 #
 User {{ username }}
-Group {{ staff }}
+Group {{ group }}
 
 </IfModule>
 
